# technical-analysis

./: .gitignore  README.md  chart_dataset.py  dataset.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py
configs/: config.yaml
notebooks/: colab_demo.ipynb
src/: __init__.py  backtest.py  data_fetch.py  dataset.py  eval.py  features.py  finbert_embed.py  llm_analyze.py  model.py  render_charts.py  train.py
